welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:30: error: value BLEU is not a member of object java.awt.Color
faireV(Color.BLEU)
             ^